# LumaPortal

./: .env.example  .gitignore  CLAUDE.md  LumaPortal-doc.md  LumaPortal.command  README.md  RELEASE_NOTES.md  START.command  STOP.command  USER_GUIDE.md  env.example  pyproject.toml
src/: badge.py  config.py  csv_import.py  database.py  luma_client.py  main.py  models.py  printer.py  search.py
src/routes/: admin.py  api.py
static/: admin.html  index.html
static/css/: styles.css
static/js/: admin.js  checkin.js
